--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@nextui-org/input": "^2.2.4",
+    "@vercel/postgres": "^0.9.0",
+    "@vercel/speed-insights": "^1.0.12",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
