--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@vercel/speed-insights": "^1.0.12",
     "next": "^14.2.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
