--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/checkbox": "^2.1.4",
     "@nextui-org/input": "^2.2.4",
+    "@nextui-org/react": "^2.4.6",
     "@vercel/postgres": "^0.9.0",
     "@vercel/speed-insights": "^1.0.12",
     "next": "^14.2.5",
